test/types/type_variables/deitz/part1/test_clone_class1_old.good
test_clone_class1_old.chpl:8: error: unresolved type specifier 'foo(2)'
test_clone_class1_old.chpl:1: note: this candidate did not match: foo(type x)
test_clone_class1_old.chpl:8: note: because non-type call actual argument #1
test_clone_class1_old.chpl:2: note: is passed to formal 'x'
